@@ -13,14 +13,15 @@
  * see <http://www.gnu.org/licenses/>.
  */
 
-package org.enginehub.craftbook.mechanics.area.simple;
+package org.enginehub.craftbook.mechanics.area;
 
 import com.sk89q.util.yaml.YAMLProcessor;
 import com.sk89q.worldedit.blocks.Blocks;
 import com.sk89q.worldedit.bukkit.BukkitAdapter;
 import com.sk89q.worldedit.math.BlockVector3;
 import com.sk89q.worldedit.regions.CuboidRegion;
-import com.sk89q.worldedit.util.HandSide;
+import com.sk89q.worldedit.util.formatting.text.TextComponent;
+import com.sk89q.worldedit.util.formatting.text.TranslatableComponent;
 import com.sk89q.worldedit.world.block.BaseBlock;
 import com.sk89q.worldedit.world.block.BlockCategories;
 import com.sk89q.worldedit.world.block.BlockType;
@@ -30,12 +31,12 @@ import org.bukkit.GameMode;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
+import org.bukkit.block.Sign;
 import org.bukkit.block.data.BlockData;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.block.Action;
 import org.bukkit.event.block.SignChangeEvent;
-import org.bukkit.inventory.ItemStack;
 import org.enginehub.craftbook.ChangedSign;
 import org.enginehub.craftbook.CraftBook;
 import org.enginehub.craftbook.CraftBookPlayer;
@@ -56,151 +57,157 @@ import java.util.stream.Collectors;
 
 /**
  * Door.
- *
- * @author turtle9598
  */
 public class Door extends CuboidToggleMechanic {
 
     @EventHandler(priority = EventPriority.HIGH)
     public void onSignChange(SignChangeEvent event) {
-
-        if (!EventUtil.passesFilter(event)) return;
-
-        if (!event.getLine(1).equalsIgnoreCase("[door]") && !event.getLine(1).equalsIgnoreCase("[door up]") && !event.getLine(1).equalsIgnoreCase("[door down]"))
+        if (!EventUtil.passesFilter(event)) {
             return;
+        }
+
+        if (!event.getLine(1).equalsIgnoreCase("[door]") && !event.getLine(1).equalsIgnoreCase("[door up]") && !event.getLine(1).equalsIgnoreCase("[door down]")) {
+            return;
+        }
 
         CraftBookPlayer player = CraftBookPlugin.inst().wrapPlayer(event.getPlayer());
 
-        if (!player.hasPermission("craftbook.mech.door")) {
-            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages)
-                player.printError("mech.create-permission");
+        if (!player.hasPermission("craftbook.door.create")) {
+            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages) {
+                player.printError(TranslatableComponent.of(
+                    "craftbook.mechanisms.create-permission",
+                    TextComponent.of(getMechanicType().getName())
+                ));
+            }
             SignUtil.cancelSignChange(event);
             return;
         }
 
-        if (event.getLine(0).equalsIgnoreCase("infinite") && !player.hasPermission("craftbook.mech.door.infinite"))
-            event.setLine(0, "0");
-        else if (!event.getLine(0).equalsIgnoreCase("infinite"))
-            event.setLine(0, "0");
-
-        player.print("mech.door.create");
-
-        if (event.getLine(1).equalsIgnoreCase("[door]"))
+        if (event.getLine(1).equalsIgnoreCase("[door]")) {
             event.setLine(1, "[Door]");
-        else if (event.getLine(1).equalsIgnoreCase("[door up]"))
+            player.printInfo(TranslatableComponent.of("craftbook.door.end-create"));
+        } else if (event.getLine(1).equalsIgnoreCase("[door up]")) {
             event.setLine(1, "[Door Up]");
-        else if (event.getLine(1).equalsIgnoreCase("[door down]"))
+            player.printInfo(TranslatableComponent.of("craftbook.door.create"));
+        } else if (event.getLine(1).equalsIgnoreCase("[door down]")) {
             event.setLine(1, "[Door Down]");
+            player.printInfo(TranslatableComponent.of("craftbook.door.create"));
+        }
     }
 
     @EventHandler(priority = EventPriority.HIGH)
     public void onRightClick(SignClickEvent event) {
-
-        if (!EventUtil.passesFilter(event)) return;
-
-        if (event.getAction() != Action.RIGHT_CLICK_BLOCK) return;
-        if (!isApplicableSign(CraftBookBukkitUtil.toChangedSign(event.getClickedBlock()).getLine(1)))
+        if (!EventUtil.passesFilter(event) || event.getAction() != Action.RIGHT_CLICK_BLOCK || event.getHand() == null) {
             return;
+        }
+
+        if (!isApplicableSign(event.getSign().getLine(1))) {
+            return;
+        }
 
         CraftBookPlayer player = CraftBookPlugin.inst().wrapPlayer(event.getPlayer());
-        if (!player.hasPermission("craftbook.mech.door.use")) {
-            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages)
+
+        if (!player.hasPermission("craftbook.door.use")) {
+            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages) {
                 player.printError("mech.use-permission");
+            }
             return;
         }
 
         if (!ProtectionUtil.canUse(event.getPlayer(), event.getClickedBlock().getLocation(), event.getBlockFace(), event.getAction())) {
-            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages)
+            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages) {
                 player.printError("area.use-permissions");
+            }
             return;
         }
 
         try {
-            ChangedSign sign = event.getSign();
-
-            if (CraftBook.getInstance().getPlatform().getConfiguration().safeDestruction && sign != null && !sign.getLine(0).equalsIgnoreCase("infinite"))
-                if (event.getPlayer().getItemInHand().getType() != Material.AIR)
-                    if (getBlockBase(event.getClickedBlock()).getType() == event.getPlayer().getItemInHand().getType() && getBlockBase(event.getClickedBlock()).getData() == event.getPlayer().getItemInHand().getData().getData()) {
-
-                        if (!player.hasPermission("craftbook.mech.door.restock")) {
-                            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages)
+            if (CraftBook.getInstance().getPlatform().getConfiguration().safeDestruction) {
+                Material heldItemType = event.getPlayer().getInventory().getItem(event.getHand()).getType();
+                if (heldItemType != Material.AIR) {
+                    Material bridgeType = getOrSetStoredType(event.getClickedBlock());
+                    if (heldItemType == bridgeType) {
+                        if (!player.hasPermission("craftbook.door.restock")) {
+                            if (CraftBook.getInstance().getPlatform().getConfiguration().showPermissionMessages) {
                                 player.printError("mech.restock-permission");
+                            }
                             return;
                         }
 
+                        int heldAmount = event.getPlayer().getInventory().getItem(event.getHand()).getAmount();
+
                         int amount = 1;
-                        if (event.getPlayer().isSneaking() && event.getPlayer().getItemInHand().getAmount() >= 5) {
+                        if (event.getPlayer().isSneaking() && heldAmount >= 5) {
                             amount = 5;
                         }
-                        addBlocks(sign, CraftBookBukkitUtil.toChangedSign(getFarSign(event.getClickedBlock())), amount);
 
-                        if (enforceType) {
-                            BlockType blockType = player.getItemInHand(HandSide.MAIN_HAND).getType().getBlockType();
-                            sign.setLine(0, sign.getLine(0) + ',' + BlockParser.toMinifiedId(blockType.getFuzzyMatcher()));
-                            sign.update(false);
+                        addToStoredBlockCount(event.getSign().getSign(), amount);
+
+                        if (!(event.getPlayer().getGameMode() == GameMode.CREATIVE)) {
+                            event.getPlayer().getInventory().getItem(event.getHand()).subtract(amount);
                         }
 
-                        if (!(event.getPlayer().getGameMode() == GameMode.CREATIVE))
-                            if (event.getPlayer().getItemInHand().getAmount() <= amount)
-                                event.getPlayer().setItemInHand(new ItemStack(Material.AIR, 0));
-                            else
-                                event.getPlayer().getItemInHand().setAmount(event.getPlayer().getItemInHand().getAmount() - amount);
-
-                        player.print("mech.restock");
+                        player.printInfo(TranslatableComponent.of("craftbook.door.restock"));
                         event.setCancelled(true);
                         return;
                     }
+                }
+            }
 
             event.setCancelled(true);
 
-            if (flipState(event.getClickedBlock(), player))
-                player.print("mech.door.toggle");
+            if (flipState(event.getClickedBlock())) {
+                player.printInfo(TranslatableComponent.of("craftbook.door.toggle"));
+            }
         } catch (InvalidMechanismException e) {
-            if (e.getMessage() != null)
-                player.printError(e.getMessage());
+            if (e.getRichMessage() != null) {
+                player.printError(e.getRichMessage());
+            }
         }
     }
 
     @EventHandler(priority = EventPriority.HIGH)
     public void onBlockRedstoneChange(final SourcedBlockRedstoneEvent event) {
-
-        if (!EventUtil.passesFilter(event)) return;
-
-        if (!allowRedstone) return;
-        if (event.isMinor()) return;
-
-        if (!SignUtil.isSign(event.getBlock())) return;
-        if (!isApplicableSign(CraftBookBukkitUtil.toChangedSign(event.getBlock()).getLine(1)))
+        if (!allowRedstone || event.isMinor() || !EventUtil.passesFilter(event)) {
             return;
+        }
+
+        if (!SignUtil.isSign(event.getBlock()) || !isApplicableSign(CraftBookBukkitUtil.toChangedSign(event.getBlock()).getLine(1))) {
+            return;
+        }
 
         Bukkit.getScheduler().runTaskLater(CraftBookPlugin.inst(), () -> {
             try {
-                flipState(event.getBlock(), null);
-            } catch (InvalidMechanismException e) {
+                flipState(event.getBlock());
+            } catch (InvalidMechanismException ignored) {
+                // Ignore this as we can't print it
             }
         }, 2L);
     }
 
-    public boolean flipState(Block trigger, CraftBookPlayer player) throws InvalidMechanismException {
-
-        if (!SignUtil.isCardinal(trigger)) throw new InvalidMechanismException("");
+    public boolean flipState(Block trigger) throws InvalidMechanismException {
+        if (!SignUtil.isCardinal(trigger)) {
+            return false;
+        }
 
         ChangedSign sign = CraftBookBukkitUtil.toChangedSign(trigger);
 
         // Attempt to detect whether the door is above or below the sign,
         // first assuming that the bridge is above
         Block proximalBaseCenter = getBlockBase(trigger);
+        BlockData proximalBaseData = proximalBaseCenter.getBlockData();
 
-        BlockData doorType = getBlockType(trigger);
-        if (!BlockUtil.areBlocksIdentical(proximalBaseCenter, doorType)) {
-            throw new InvalidMechanismException("mech.door.material");
+        Material doorType = getOrSetStoredType(trigger);
+        if (proximalBaseData.getMaterial() != doorType) {
+            throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.different-materials"));
         }
 
         // Find the other side
         Block farSide = getFarSign(trigger);
 
-        if (farSide.getType() != trigger.getType())
-            throw new InvalidMechanismException("mech.door.other-sign");
+        if (farSide == null || farSide.getType() != trigger.getType()) {
+            throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.missing-other-sign"));
+        }
 
         // Check the other side's base blocks for matching type
         Block distalBaseCenter = null;
@@ -208,9 +215,13 @@ public class Door extends CuboidToggleMechanic {
             distalBaseCenter = farSide.getRelative(BlockFace.DOWN);
         } else if (sign.getLine(1).equalsIgnoreCase("[Door Down]")) {
             distalBaseCenter = farSide.getRelative(BlockFace.UP);
+        } else {
+            throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.missing-other-sign"));
         }
-        if (!BlockUtil.areBlocksIdentical(distalBaseCenter, proximalBaseCenter))
-            throw new InvalidMechanismException("mech.door.material");
+
+        if (!distalBaseCenter.getBlockData().matches(proximalBaseData)) {
+            throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.different-materials"));
+        }
 
         // Select the togglable region
         CuboidRegion toggle = getCuboidArea(trigger, proximalBaseCenter, distalBaseCenter);
@@ -218,12 +229,12 @@ public class Door extends CuboidToggleMechanic {
         // this is kinda funky, but we only check one position
         // to see if the bridge is open and/or closable.
         // efficiency choice :/
-        Block hinge;
+        Material hingeType;
 
         if (sign.getLine(1).equals("[Door Up]")) {
-            hinge = proximalBaseCenter.getRelative(BlockFace.UP);
+            hingeType = proximalBaseCenter.getRelative(BlockFace.UP).getType();
         } else {
-            hinge = proximalBaseCenter.getRelative(BlockFace.DOWN);
+            hingeType = proximalBaseCenter.getRelative(BlockFace.DOWN).getType();
         }
 
         // aaand we also only check if it's something we can
@@ -231,24 +242,28 @@ public class Door extends CuboidToggleMechanic {
         // there are no errors reported upon weird blocks like
         // obsidian in the middle of a wooden bridge, just weird
         // results.
-        if (BlockUtil.isBlockReplacable(hinge.getType()) && proximalBaseCenter.getType() != hinge.getType())
-            return close(trigger, farSide, doorType, toggle, player);
-        else
-            return open(trigger, farSide, doorType, toggle);
-
+        if (BlockUtil.isBlockReplacable(hingeType) && proximalBaseData.getMaterial() != hingeType) {
+            boolean closeSuccess = close(sign.getSign(), (Sign) farSide.getState(false), proximalBaseData, toggle);
+            if (!closeSuccess) {
+                throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.not-enough-blocks"));
+            }
+            return true;
+        } else {
+            return open(sign.getSign(), proximalBaseData, toggle);
+        }
     }
 
     @Override
-    public Block getFarSign(Block trigger) {
+    public Block getFarSign(Block nearSign) {
         // Find the other side
         Block otherSide = null;
 
-        ChangedSign sign = CraftBookBukkitUtil.toChangedSign(trigger);
+        ChangedSign sign = CraftBookBukkitUtil.toChangedSign(nearSign);
 
         if (sign.getLine(1).equals("[Door Up]")) {
-            otherSide = trigger.getRelative(BlockFace.UP);
+            otherSide = nearSign.getRelative(BlockFace.UP);
         } else if (sign.getLine(1).equals("[Door Down]")) {
-            otherSide = trigger.getRelative(BlockFace.DOWN);
+            otherSide = nearSign.getRelative(BlockFace.DOWN);
         }
         for (int i = 0; i <= maxLength; i++) {
             // about the loop index:
@@ -276,54 +291,66 @@ public class Door extends CuboidToggleMechanic {
     }
 
     @Override
-    public Block getBlockBase(Block trigger) throws InvalidMechanismException {
-        ChangedSign s = CraftBookBukkitUtil.toChangedSign(trigger);
+    public Block getBlockBase(Block sign) throws InvalidMechanismException {
+        ChangedSign s = CraftBookBukkitUtil.toChangedSign(sign);
 
-        Block proximalBaseCenter = null;
+        Block proximalBaseCenter;
 
         if (s.getLine(1).equalsIgnoreCase("[Door Up]")) {
-            proximalBaseCenter = trigger.getRelative(BlockFace.UP);
+            proximalBaseCenter = sign.getRelative(BlockFace.UP);
         } else if (s.getLine(1).equalsIgnoreCase("[Door Down]")) {
-            proximalBaseCenter = trigger.getRelative(BlockFace.DOWN);
-        } else throw new InvalidMechanismException("Sign is incorrectly made.");
+            proximalBaseCenter = sign.getRelative(BlockFace.DOWN);
+        } else {
+            // This can never happen.
+            throw new IllegalStateException("Sign passed as a door sign is not a door sign");
+        }
 
-        if (Blocks.containsFuzzy(blocks, BukkitAdapter.adapt(proximalBaseCenter.getBlockData())))
+        if (Blocks.containsFuzzy(blocks, BukkitAdapter.adapt(proximalBaseCenter.getBlockData()))) {
             return proximalBaseCenter;
-        else throw new InvalidMechanismException("mech.door.unusable");
+        }
+
+        throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.unusable-material"));
     }
 
     @Override
     public CuboidRegion getCuboidArea(Block trigger, Block proximalBaseCenter, Block distalBaseCenter) throws InvalidMechanismException {
         double distance = proximalBaseCenter.getLocation().distanceSquared(distalBaseCenter.getLocation());
         if (distance <= 2 * 2) {
-            throw new InvalidMechanismException("Door too short!");
+            throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.too-short"));
         }
+
+        Material expectedType = getOrSetStoredType(trigger);
+
         // Select the togglable region
         CuboidRegion toggle = new CuboidRegion(BukkitAdapter.asBlockVector(proximalBaseCenter.getLocation()), BukkitAdapter.asBlockVector(distalBaseCenter.getLocation()));
-        ChangedSign sign = CraftBookBukkitUtil.toChangedSign(trigger);
-        int left, right;
-        try {
-            left = Math.max(0, Math.min(maxWidth, Integer.parseInt(sign.getLine(2))));
-        } catch (Exception e) {
-            left = 1;
-        }
-        try {
-            right = Math.max(0, Math.min(maxWidth, Integer.parseInt(sign.getLine(3))));
-        } catch (Exception e) {
-            right = 1;
+
+        if (distalBaseCenter.getType() != proximalBaseCenter.getType()) {
+            throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.different-materials"));
         }
 
         // Expand Left
-        for (int i = 0; i < left; i++) {
-            if (distalBaseCenter.getRelative(SignUtil.getLeft(trigger), i).getType() != proximalBaseCenter.getRelative(SignUtil.getLeft(trigger), i).getType())
-                throw new InvalidMechanismException("mech.door.material");
+        for (int i = 1; i < maxWidth; i++) {
+            Material proximalOffsetType = proximalBaseCenter.getRelative(SignUtil.getLeft(trigger), i).getType();
+            if (proximalOffsetType != expectedType) {
+                // Check if this is a valid bridge block first.
+                break;
+            }
+            if (distalBaseCenter.getRelative(SignUtil.getLeft(trigger), i).getType() != proximalOffsetType) {
+                throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.different-materials"));
+            }
             toggle.expand(CraftBookBukkitUtil.toVector(SignUtil.getLeft(trigger)), BlockVector3.ZERO);
         }
 
         // Expand Right
-        for (int i = 0; i < right; i++) {
-            if (distalBaseCenter.getRelative(SignUtil.getRight(trigger), i).getType() != proximalBaseCenter.getRelative(SignUtil.getRight(trigger), i).getType())
-                throw new InvalidMechanismException("mech.door.material");
+        for (int i = 1; i < maxWidth; i++) {
+            Material proximalOffsetType = proximalBaseCenter.getRelative(SignUtil.getRight(trigger), i).getType();
+            if (proximalOffsetType != expectedType) {
+                // Check if this is a valid bridge block first.
+                break;
+            }
+            if (distalBaseCenter.getRelative(SignUtil.getRight(trigger), i).getType() != proximalOffsetType) {
+                throw new InvalidMechanismException(TranslatableComponent.of("craftbook.door.different-materials"));
+            }
             toggle.expand(CraftBookBukkitUtil.toVector(SignUtil.getRight(trigger)), BlockVector3.ZERO);
         }
 
@@ -359,14 +386,13 @@ public class Door extends CuboidToggleMechanic {
         config.setComment("allow-redstone", "Allow doors to be toggled via redstone.");
         allowRedstone = config.getBoolean("allow-redstone", true);
 
-        config.setComment("max-length", "The maximum length(height) of a door.");
-        maxLength = config.getInt("max-length", 30);
+        config.setComment("max-height", "The maximum height of a door.");
+        maxLength = config.getInt("max-height", 30);
 
         config.setComment("max-width", "Max width either side. 5 = 11, 1 in middle, 5 on either side");
         maxWidth = config.getInt("max-width", 5);
 
         config.setComment("blocks", "A list of blocks that a door can be made out of.");
-        blocks = BlockParser.getBlocks(config.getStringList("blocks",
-            getDefaultBlocks().stream().sorted(String::compareToIgnoreCase).collect(Collectors.toList())), true);
+        blocks = BlockParser.getBlocks(config.getStringList("blocks", getDefaultBlocks().stream().sorted(String::compareToIgnoreCase).toList()), true);
     }
 }
